--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "csv-parse": "^5.5.6",
     "csv-parser": "^3.0.0",
+    "csv-stringify": "^6.5.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
