--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.14",
     "razorpay": "^2.9.4",
     "socket.io": "^4.7.5",
     "uuid": "^10.0.0"
