--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "mongoose": "^8.4.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
@@ -35,6 +36,7 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "artillery": "^2.0.20",
     "nodemon": "^3.1.3"
   }
 }
