--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Famto API",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js --host 0.0.0.0",
-    "test": ""
+    "start": "index.js --host 0.0.0.0",
+    "dev": "nodemon index.js --host 0.0.0.0"
   },
   "author": "",
   "license": "ISC",
