--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,27 +24,7 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker buildx build \
-            --build-arg PORT=${{ secrets.PORT }} \
-            --build-arg MONGO_URL=${{ secrets.MONGO_URL }} \
-            --build-arg JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }} \
-            --build-arg SEEDER_EMAIL=${{ secrets.SEEDER_EMAIL }} \
-            --build-arg SEEDER_PASSWORD=${{ secrets.SEEDER_PASSWORD }} \
-            --build-arg SEEDER_PHONENUMBER=${{ secrets.SEEDER_PHONENUMBER }} \
-            --build-arg WEBHOOK_SECRET=${{ secrets.WEBHOOK_SECRET }} \
-            --build-arg RAZORPAY_KEY_ID=${{ secrets.RAZORPAY_KEY_ID }} \
-            --build-arg RAZORPAY_KEY_SECRET=${{ secrets.RAZORPAY_KEY_SECRET }} \
-            --build-arg MapMyIndiaAPIKey=${{ secrets.MapMyIndiaAPIKey }} \
-            --build-arg MAPPLS_CLIENT_ID=${{ secrets.MAPPLS_CLIENT_ID }} \
-            --build-arg MAPPLS_CLIENT_SECRET=${{ secrets.MAPPLS_CLIENT_SECRET }} \
-            --build-arg API_KEY=${{ secrets.API_KEY }} \
-            --build-arg AUTH_DOMAIN=${{ secrets.AUTH_DOMAIN }} \
-            --build-arg PROJECT_ID=${{ secrets.PROJECT_ID }} \
-            --build-arg STORAGE_BUCKET=${{ secrets.STORAGE_BUCKET }} \
-            --build-arg MESSAGING_SENDER_ID=${{ secrets.MESSAGING_SENDER_ID }} \
-            --build-arg APP_ID=${{ secrets.APP_ID }} \
-            --build-arg MEASUREMENT_ID=${{ secrets.MEASUREMENT_ID }} \
-            -t myfamto/famto-api:latest .
+          docker buildx build --build-arg PORT=${{ secrets.PORT }} --build-arg MONGO_URL=${{ secrets.MONGO_URL }} --build-arg JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }} --build-arg SEEDER_EMAIL=${{ secrets.SEEDER_EMAIL }} --build-arg SEEDER_PASSWORD=${{ secrets.SEEDER_PASSWORD }} --build-arg SEEDER_PHONENUMBER=${{ secrets.SEEDER_PHONENUMBER }} --build-arg WEBHOOK_SECRET=${{ secrets.WEBHOOK_SECRET }} --build-arg RAZORPAY_KEY_ID=${{ secrets.RAZORPAY_KEY_ID }} --build-arg RAZORPAY_KEY_SECRET=${{ secrets.RAZORPAY_KEY_SECRET }} --build-arg MapMyIndiaAPIKey=${{ secrets.MapMyIndiaAPIKey }} --build-arg MAPPLS_CLIENT_ID=${{ secrets.MAPPLS_CLIENT_ID }} --build-arg MAPPLS_CLIENT_SECRET=${{ secrets.MAPPLS_CLIENT_SECRET }} --build-arg API_KEY=${{ secrets.API_KEY }} --build-arg AUTH_DOMAIN=${{ secrets.AUTH_DOMAIN }} --build-arg PROJECT_ID=${{ secrets.PROJECT_ID }} --build-arg STORAGE_BUCKET=${{ secrets.STORAGE_BUCKET }} --build-arg MESSAGING_SENDER_ID=${{ secrets.MESSAGING_SENDER_ID }} --build-arg APP_ID=${{ secrets.APP_ID }} --build-arg MEASUREMENT_ID=${{ secrets.MEASUREMENT_ID }} -t myfamto/famto-api:latest .
           docker push myfamto/famto-api:latest
 
       - name: Deploy to DigitalOcean Droplet via SSH
