--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,9 +79,9 @@ jobs:
           port: 22
           script: |
             docker login -u ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }} -p ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }} registry.digitalocean.com
-            docker stop $(echo famto-api)
-            docker rm $(echo famto-api)
+            docker stop  famto-api
+            docker rm e famto-api
             docker run -d \
             --restart always \
-            --name $(echo famto-api) \
-            $(echo registry.digitalocean.com/famto)/$(echo famto-api):$(echo $GITHUB_SHA | head -c7)
+            --name  famto-api\
+             registry.digitalocean.com/famto)/famto-api):$(echo $GITHUB_SHA | head -c7)
