--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
+    "famto": "file:",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.2.0",
     "https": "^1.0.0",
