--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "pdfkit": "^0.15.0",
+    "puppeteer": "^23.3.0",
     "razorpay": "^2.9.4",
     "socket.io": "^4.7.5",
     "uuid": "^10.0.0"
