--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
-    "mongoose": "^8.4.1",
+    "mongoose": "^8.6.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "puppeteer": "^23.3.0",
