--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemailer": "^6.9.14",
     "puppeteer": "^23.5.0",
     "razorpay": "^2.9.4",
+    "sharp": "^0.33.5",
     "socket.io": "^4.7.5",
     "uuid": "^10.0.0"
   },
