--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "csv-parser": "^3.0.0",
     "csv-writer": "^1.6.0",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.21.0",
     "express-validator": "^7.2.0",
     "famto": "file:",
