--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@turf/turf": "^7.1.0",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "canvas": "^2.11.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "csv-parser": "^3.0.0",
