--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "express-validator": "^7.2.0",
+    "famto": "file:",
     "firebase": "^10.14.0",
     "firebase-admin": "^12.5.0",
     "https": "^1.0.0",
